--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "eslint-config-next": "13.0.3",
     "next": "13.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.6.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "standard": "^17.0.0"
