--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "firebase": "^9.14.0",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
